[project]
name = "ubion-5-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bs4>=0.0.2",
    "chromium>=0.0.0",
    "ctgan>=0.11.1",
    "dash>=4.1.0",
    "deepagents>=0.5.2",
    "diffusers>=0.37.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.10.1",
    "ipython>=9.12.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.31",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "plotly[express]>=6.6.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "tavily>=1.1.0",
    "tavily-python>=0.7.23",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "u>=4.0",
]
